--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,13 @@
     <string name="text_view_main_search_item_when">When</string>
     <string name="text_view_title_item">Popular trips</string>
     <string name="image_view_popular_background_description">Background of card main menu</string>
+    <string name="app_bar_next">Next</string>
+    <string name="welcome_message">Welcome!</string>
+    <string name="enter_phone_number">Enter your phone number to start</string>
+    <string name="text_send_code">We will send you code for registration</string>
+    <string name="button_continue">Continue</string>
+    <string name="text_did_send_code">We have send code to you</string>
+    <string name="did_get_code_question">Didn\'t get code?</string>
+    <string name="button_resend_code">Send code again</string>
+    <string name="error_wrong_number">Wrong number</string>
 </resources>
