--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,4 +19,5 @@
     <string name="did_get_code_question">Didn\'t get code?</string>
     <string name="button_resend_code">Send code again</string>
     <string name="error_wrong_number">Wrong number</string>
+    <string name="error_wrong_code">Wrong code</string>
 </resources>
