--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,21 +4,29 @@
     <string name="bottom_item_search">Поиск</string>
     <string name="bottom_item_profile">Профиль</string>
     <string name="bottom_item_orders">Заказы</string>
-    <string name="text_view_main_search_item_from_place">Откуда</string>
-    <string name="text_view_main_search_item_to_place">Куда</string>
-    <string name="button_text_pick_uo">Подобрать</string>
-    <string name="text_view_main_search_item_when">Когда</string>
-    <string name="text_view_title_item">Популярные направления</string>
-    <string name="image_view_popular_background_description">Фон карточки на главном меню</string>
-    <string name="app_bar_next">Следующий</string>
+    <string name="search_item_from_place">Откуда</string>
+    <string name="search_item_to_place">Куда</string>
+    <string name="button_text_pick_up">Подобрать</string>
+    <string name="search_item_travel_data">Когда</string>
+    <string name="title_item">Популярные направления</string>
+    <string name="popular_background_description">Фон карточки на главном меню</string>
     <string name="welcome_message">Добро пожаловать!</string>
     <string name="enter_phone_number">Для того, чтобы начать, введите ваш номер телефона</string>
     <string name="text_send_code">Мы отправим вам одноразовый код для регистрации</string>
     <string name="button_continue">Продолжить</string>
-    <string name="hint_phone_number" translatable="false">+7 (800) 555 35 35</string>
     <string name="text_did_send_code">Мы отправили вам код на номер</string>
     <string name="did_get_code_question">Не получили код?</string>
     <string name="button_resend_code">Отправить ещё раз</string>
     <string name="error_wrong_number">Неправильный номер</string>
     <string name="error_wrong_code">Неправильный код</string>
+    <string name="phone">Телефон</string>
+    <string name="phone_example">Телефон в формате +7 123 4567890 для связи в случае изменений в рейсе</string>
+    <string name="personal_data">Персональные данные</string>
+    <string name="button_add_passenger">Добавить пассажира</string>
+    <string name="cards">Карты</string>
+    <string name="add_card">Добавить карту</string>
+    <string name="notify_about_discounts">Уведомлять об акциях и скидках</string>
+    <string name="notify_about_order_status">Уведомлять о статусе заказов и бронирования</string>
+    <string name="image_view_logo_description" translatable="false">TPort</string>
+    <string name="image_button_change_destination" translatable="false">Change destination</string>
 </resources>
