--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -27,4 +27,10 @@
     <string name="add_card">Add card</string>
     <string name="notify_about_discounts">Notify about discounts and promotions</string>
     <string name="notify_about_order_status">Notify about order\'s status and booking</string>
+    <string name="image_button_change_destination">Change destination</string>
+    <string name="menu_filter">Filter</string>
+    <string name="search_routes_toolbar_title">Search routes</string>
+    <string name="search_routes_toolbar_begin_label">Start:</string>
+    <string name="search_routes_toolbar_end_label">End:</string>
+    <string name="image_view_filter_button">Filter button</string>
 </resources>
