--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -33,4 +33,5 @@
     <string name="search_routes_toolbar_begin_label">Start:</string>
     <string name="search_routes_toolbar_end_label">End:</string>
     <string name="image_view_filter_button">Filter button</string>
+    <string name="extended_fab_search_routes">Book this route</string>
 </resources>
