Order item update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,9 +41,10 @@
     <string name="image_view_code_second">Вторая цифра кода</string>
     <string name="image_view_code_third">Третья цифра кода</string>
     <string name="image_view_code_fourth">Четвёртая цифра кода</string>
-    <string name="arrival_time">Время прибытия: %1$s</string>
+    <string name="arrival_time">Время прибытия - %1$s</string>
+    <string name="time_in_travel">Время в пути - %1$s</string>
     <string name="short_arrival_time">Прибытие:</string>
     <string name="is_paid">Оплачено</string>
-    <string name="not_paid">Не оплачено</string>
+    <string name="not_paid">Не оплачено!</string>
     <string name="money" translatable="false">%1$d ₽</string>
 </resources>
