--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="image_button_change_destination">Изменить направление</string>
     <string name="menu_filter">Фильтр</string>
     <string name="search_routes_toolbar_title">Поиск маршрутов</string>
+    <string name="trip_details_toolbar_title">Маршрут</string>
     <string name="search_routes_toolbar_begin_label">Начало:</string>
     <string name="search_routes_toolbar_end_label">Конец:</string>search_routes_toolbar_when_label
     <string name="search_routes_toolbar_when_label">Когда:</string>
