New text at third registration step

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -47,4 +47,5 @@
     <string name="is_paid">Paid</string>
     <string name="not_paid">Not paid!</string>
     <string name="money">%1$s ₽</string>
+    <string name="hint_name">Name</string>
 </resources>
