Espresso ui test

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -61,5 +61,5 @@
     <string name="extended_fab_confirm">Confirm</string>
     <string name="current_order">Current order:</string>
     <string name="coming_order">Coming order:</string>
-    <string name="history">History:</string>
+    <string name="history_order">History:</string>
 </resources>
