--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="coming_order">Предстоящие поездки:</string>
     <string name="history_order">История:</string>
     <string name="minus" translatable="false">—</string>
+    <string name="date_time_label">Даты поездки</string>
 </resources>
